+ Added the JPEG options dialog box. + Fixed some convolution matrices. + Fixed editors_draw_sprite_tiled & control_tool for tiled mode in   transparent layers (non-Background). + Added gfxobj_id. - Removed referenced stock (replaced with the ImageRef structure). + Fixed the whole 'target' stuff between effects and target_button. + Fixed app_get_fg_color & app_get_bg_color to return the black color   instead of mask when a `Background' layer is actived. + Added get_color_for_layer & fixup_color_for_layer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,17 @@
+2008-04-11  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/modules/sprites.h (ImageRef): Added.
+
+	* src/raster/stock.c (stock_new_ref): Removed.
+
+2008-04-10  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/modules/tools.c (control_tool): Fixed tiled drawing mode.
+
 2008-03-29  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/core/color.c (get_color_for_layer): Added to avoid writing
+	colors with Alpha < 255 in the `Background' layer.
 
 	* src/modules/tools.c (ink_hline[124]_soften): Fixed to support
 	tiled mode.
