--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2008-04-13  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/raster/undo.c (read_raw_cel, write_raw_cel): Fixed to
+	read/write the position of the Cel with sign (int16_t instead of
+	uint16_t).
+
+	* src/commands/cmd_advanced_mode.c (cmd_advanced_mode_execute):
+	Fixed another typo (reported by Manuel Quiñones).
+
+	* src/dialogs/tips.c (dialogs_tips): Fixed a typo (reported by
+	Manuel Quiñones).
+
+	* makefile.lnx: Applied Manuel Quiñones's patch to fix the
+	install/uninstall rules.
+
+	* src/commands/cmd_new_frame.c (copy_cel_in_next_frame): Fixed,
+	now it copies the entiry cel instead of the visible area.
+
 2008-04-11  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/modules/sprites.h (ImageRef): Added.
@@ -533,7 +551,7 @@
 2007-11-16  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/raster/cel.c: Renamed "frame" to "cel" to avoid
-	confusion (Manuel Quiñones advice)
+	confusion (Manuel Quiñones advice).
 
 	* src/modules/render.[ch]: Moved to util/.
 
