--- a/NEWS.txt
+++ b/NEWS.txt
@@ -11,7 +11,8 @@ NEWS
 + Added support to lock lines in special angles with the Shift key,
   useful to draw in isometric views (feature request #1961397).
 + Fixed bugs #1958760 and #1958932.
-+ Fixed other bugs (Flatten Layers, File Selector, etc.).
++ Fixed other serious bugs (Dead-pointers to palettes, Flatten
+  Layers, File Selector, etc.).
 
 0.6b2
 -----
