Fixed some compilation errors in gcc 64 bits (reported by Scott Wilson).

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -29,6 +29,7 @@ AUTHORS
     Nora Amendez
     Peter Wang (tjaden)
     Robert J Ohannessian (Bob)
+    Scott Wilson
     Trent Gamblin (trentg)
 
 
