--- a/NEWS.txt
+++ b/NEWS.txt
@@ -2,6 +2,12 @@
 NEWS
 ===================================
 
+0.7
+---
+
++ Added "Save Copy As" command (feature #2636076).
++ Fixed compilation support for gcc 64 bits.
+
 0.6.1
 -----
 
