+ Added a progress bar in the file-selector to show the progress of thumbnail generation. + Fixed a program crash in file-selector dialog when you open a file and the thumbnail is being generated.

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -10,6 +10,8 @@ NEWS
   entry fields.
 + Fixed a bug where file names for new sprites are lower-case always
   (in Windows).
++ Fixed a program crash when try to open a file in the middle of a
+  thumbnail generation process.
 
 0.7
 ---
