--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2009-09-03  David Capello  <davidcapello@gmail.com>
 
+	* Version 0.7.2 released.
+
 	* src/commands/cmd_close_file.cpp (close_current_sprite): Fixed
 	bug #2847210: "Save" button when close a modified file was not working.
 
