--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-21  David Capello  <davidcapello@gmail.com>
+
+	* src/modules/skinneable_theme.h (jtheme): Added SkinneableTheme
+	class. Thanks to Ilija Melentijevic for the graphics.
+
 2009-11-17  David Capello  <davidcapello@gmail.com>
 
 	* src/raster/layer.h (Layer, LayerImage, LayerFolder): Converted
